--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/png" href="Wlogo.png" />
+    <link rel="icon" type="image/png" href="./src/icon/Wlogo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,7 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
